Modified topology_kafka.yalm to use kafka spout instead of RandomSentenceSpout Updated Negative and Positive Bolts with new words Added sentence generator script Added kafka dependency needed for Kafka Spout

--- a/src/test/resources/flux/topology_kafka.yaml
+++ b/src/test/resources/flux/topology_kafka.yaml
@@ -42,6 +42,19 @@ components:
           - "value.serializer"
           - "org.apache.kafka.common.serialization.StringSerializer" 
 
+  - id: "spoutConfig"
+    className: "org.apache.storm.kafka.SpoutConfig"
+    constructorArgs:
+      - ref: "zkHosts"
+      - "sentimentIn"
+      - "/kafkaSpout"
+      - "myId"
+    properties:
+      - name: "ignoreZkOffsets"
+        value: true
+      - name: "scheme"
+        ref: "stringMultiScheme"
+
 config:
   topology.workers: 1
 
@@ -49,6 +62,11 @@ spouts:
   - id: "spout-1"
     className: "com.sourcevirtues.sentiment.storm.pure.spout.RandomSentenceSpout"
     parallelism: 1
+
+  - id: "kafka-spout"
+    className: "org.apache.storm.kafka.KafkaSpout"
+    constructorArgs:
+      - ref: "spoutConfig"
 
 bolts:
   - id: "bolt-stem"
@@ -84,7 +102,7 @@ bolts:
 
 streams:
   - name: "random --> stem" # name isn't used (placeholder for logging, UI, etc.)
-    from: "spout-1"
+    from: "kafka-spout"
     to: "bolt-stem"
     grouping:
       type: LOCAL_OR_SHUFFLE
