--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
  <properties>
   <storm.version>1.0.0</storm.version>
   <log4j2.storm.version>2.1</log4j2.storm.version>
+  <kafka.version>0.8.2.2</kafka.version>
  </properties>
 
  <dependencies>
@@ -55,6 +56,22 @@
      <groupId>commons-logging</groupId>
     </exclusion>
    </exclusions>
+  </dependency>
+  
+  <dependency>
+    <groupId>org.apache.kafka</groupId>
+    <artifactId>kafka_2.10</artifactId>
+    <version>${kafka.version}</version>
+    <exclusions>
+      <exclusion>
+        <artifactId>slf4j-log4j12</artifactId>
+        <groupId>org.slf4j</groupId>
+      </exclusion>
+      <exclusion>
+        <artifactId>log4j</artifactId>
+        <groupId>log4j</groupId>
+      </exclusion>
+    </exclusions>
   </dependency>
 
   <!-- <dependency>
